# match-list-processor

./: .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_ISSUE_84.md  NOTIFICATION_QUICKSTART.md  PHASE_1B_VERIFICATION.md  README.md  coverage.json  create_group_description.py  docker-compose.test.yml  docker-compose.yml  fix_all_datetime_imports.sh  fix_datetime.sh  fix_line_lengths.py  fix_tests_issue_84.py  fix_utc_imports.sh  match_list_processor.py  performance_baseline_1756798605.json  performance_baseline_1756798684.json  performance_baseline_1756798714.json  performance_baseline_1756800236.json  performance_baseline_1756800253.json  performance_baseline_1756800542.json  performance_baseline_1756800553.json  performance_baseline_1756800585.json  performance_baseline_1756800852.json  performance_baseline_1756800865.json  performance_baseline_1758588984.json  performance_baseline_1758611838.json  performance_baseline_1758659287.json  performance_baseline_1758659505.json  performance_baseline_1758659772.json  performance_baseline_1758662908.json  performance_baseline_1758691398.json  performance_baseline_1758691399.json  (+28 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  pr-tracker.yml  release.yml
config/: notification_channels.yml  stakeholders_template.json  unified_processor.yml
data/: previous_matches.json
docs/: ALERT_MANAGEMENT.md  API_DOCUMENTATION.md  ARCHITECTURE_MODES.md  DEPLOYMENT_GUIDE.md  ERROR_HANDLING_LOGGING.md  EVENT_DRIVEN_ARCHITECTURE.md  HEALTH_CHECK.md  INTEGRATION_TESTING_GUIDE.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_TOOLING_GUIDE.md  MONITORING_ARCHITECTURE.md  NOTIFICATION_CONFIGURATION.md  NOTIFICATION_DEPLOYMENT_GUIDE.md  TESTING_COVERAGE.md  TEST_COVERAGE_STRATEGY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_MONITORING.md  ci_cd_compatibility_guide.md  comprehensive-test-suite-implementation.md  milestone-audit-process.md  redis_publishing_guide.md
scripts/: demo_granular_categorization.py  demo_notification_system.py  demo_semantic_bridge.py  deploy.sh  test_ci_fixes.sh  test_coverage_report.py  validate_ci_compatibility.py  validate_config.py  validate_deployment.sh
scripts/migration/: demo_migration.py  migrate_config.py  migrate_to_unified_processor.sh  rollback_migration.sh  test_migration_tools.py  validate_migrated_config.py  validate_post_migration.py
scripts/validation/: production_deployment_validator.py  run_integration_validation.py  validate_deployment.py
src/: __init__.py  __main__.py  app.py  app_event_driven.py  app_persistent.py  app_unified.py  config.py  custom_types.py  interfaces.py  main.py  types.py
src/core/: change_categorization.py  change_detector.py  data_manager.py  logging_config.py  match_comparator.py  match_processor.py  retry_utils.py  unified_processor.py
src/notifications/: __init__.py  notification_service.py
src/redis_integration/: __init__.py  app_integration.py  config.py  connection_manager.py  message_formatter.py  message_formatter.py.bak  publisher.py  services.py
src/services/: api_client.py  avatar_service.py  health_service.py  phonebook_service.py  storage_service.py  webhook_service.py
src/utils/: description_generator.py  file_utils.py
src/web/: __init__.py  health_server.py
tests/: conftest.py  test_app.py  test_app_persistent.py  test_change_categorization.py  test_change_detector.py  test_config.py  test_data_manager.py  test_event_driven.py  test_health_integration.py  test_health_server.py  test_health_service.py  test_integration.py  test_main_entry_point.py  test_match_comparator.py  test_match_processor.py  test_notification_analytics.py  test_notification_system.py  test_notification_templates.py  test_referee_change_detection.py  test_referee_redis_integration.py  test_services.py  test_unified_integration.py  test_unified_processor.py  test_utils.py  test_workflows.py
tests/integration/: test_comprehensive_integration.py  test_event_driven_integration.py  test_monitoring_notification_flow.py  test_redis_publishing.py  test_semantic_notification_integration.py  test_service_consolidation_e2e.py
tests/performance/: test_performance_benchmarks.py  test_performance_comprehensive.py
tests/redis_integration/: test_message_formatter.py  test_publisher.py  test_redis_app_integration.py  test_redis_config.py  test_redis_connection_manager.py  test_redis_integration.py  test_redis_services.py
tests/security/: test_security_comprehensive.py
tests/unit/: test_85_percent_threshold.py  test_backward_compatibility.py  test_change_detection_comprehensive.py  test_channel_clients_coverage.py  test_coverage_boost.py  test_enhanced_api_client_monitoring.py  test_enhanced_error_handling.py  test_final_90_percent_breakthrough.py  test_final_90_percent_precision.py  test_final_90_percent_push.py  test_final_90_percent_victory.py  test_focused_coverage_90.py  test_milestone_1_coverage_boost.py  test_milestone_1_delivery_monitoring.py  test_milestone_1_integration.py  test_milestone_1_semantic_analysis.py  test_notification_broadcaster_coverage.py  test_notification_service_system_alerts.py  test_notification_system_comprehensive.py  test_semantic_to_legacy_adapter.py  test_simple_90_percent_push.py  test_simple_coverage_90.py  (+4 more)
(+39 files in other folders)
